# ev-agent-simulator

./: .gitignore  README.md  TODO.md  WALKTHROUGH.md  archetypes.py  dashboard.py  elexon_client.py  pyproject.toml  requirements.txt  simulation.py  streamlit_app.py
data/: market_index.csv
take-home-documents/: Copy of Axle Take Home Test_ Archetypes (1).xlsx
tests/: test_archetypes.py  test_ideas.py  test_simulation.py
